--- a/MinhasTarefas/MinhasTarefas.csproj
+++ b/MinhasTarefas/MinhasTarefas.csproj
@@ -19,4 +19,8 @@
       <Folder Include="Controllers" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="Model" />
+    </ItemGroup>
+
 </Project>
