--- a/MinhasTarefas/appsettings.json
+++ b/MinhasTarefas/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DataBase" : "Server=localhost;Database=Tarefas;Uid=root;Pwd=;"
+  },
   "AllowedHosts": "*"
 }
