feat(MinhasTarefas): Criando as strings de conexão e Migrations

--- a/MinhasTarefas/appsettings.json
+++ b/MinhasTarefas/appsettings.json
@@ -5,8 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  //"ConnectionStrings": {
+  //  "DataBase-MySQL": "Server=localhost;Database=Tarefas;Uid=root;Pwd=;"
+  //},
   "ConnectionStrings": {
-    "DataBase" : "Server=localhost;Database=Tarefas;Uid=root;Pwd=;"
+    "DataBaseSQL-Server": "Server=WKSJUN000226\\DEVAGRAMSQL;Database=MinhasTarefas;User Id=sa;Password=K!b3l4nd;"
   },
   "AllowedHosts": "*"
 }
